--- a/src/main/webapp/src/App.css
+++ b/src/main/webapp/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+.popup {
+  width: 400px;
+  height: 500px;
+  background: #B11485; 
+  position: absolute;
+  left: 50%;
+  top: 50%; 
+  padding: 30px;
+  box-sizing: border-box;
+  transform: translate(-50%, -50%); 
+}
+
+html {
+  padding: 0;
+  margin: 0;
+}
+body {
+  padding: 0;
+  margin: 0;
+}
