--- a/src/main/webapp/src/css/Login.css
+++ b/src/main/webapp/src/css/Login.css
@@ -1,12 +1,37 @@
-.popup {
-    width: 400px;
-    height: 500px;
-    background: #B11485; 
-    position: fixed;
-    left: 50%;
-    top: 50%; 
-    padding: 30px;
-    box-sizing: border-box;
-    transform: translate(-50%, -50%); 
-    z-index: 100;
-  }
+.container {
+  padding: 0;
+  margin: 0 auto;
+  width: 1000px;
+  text-align: center;
+}
+.loginForm {
+  padding: 0;
+  margin: 0 auto;
+  width: 500px;
+  display: inline-block;
+}
+.loginForm span{
+  display: block;
+  width: 100%;
+  height: 51px;
+  border: solid 2px #e4dcdc;
+  padding: 10px 110px 10px 14px;
+  background: #fff;
+  box-sizing: border-box;
+}
+.loginForm input{
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 29px;
+  padding-right: 25px;
+  line-height: 29px;
+  border: none;
+  background: #fff;
+  font-size: 15px;
+  box-sizing: border-box;
+  /* z-index: 10; */
+}
+.loginForm input:focus {
+  outline: none;
+}
