--- a/src/main/webapp/src/css/Login.css
+++ b/src/main/webapp/src/css/Login.css
@@ -35,3 +35,25 @@
 .loginForm input:focus {
   outline: none;
 }
+.loginButton {
+  display: block;
+  width: 100%;
+  padding: 13px 0 13px;
+  border-radius: 6px;
+  border: solid 1px rgba(0,0,0,.15);
+  background-color: #03c75a;
+  box-sizing: border-box;
+}
+.loginButton .loginText {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #fff;
+}
+.loginForm li {
+  list-style: none;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: 500;
+}
